[ENG-1613] feat: add csrf param to oauth endpoint

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -51,6 +51,10 @@ paths:
                   type: string
                   description: The provider that this app connects to.
                   example: salesforce
+                enableCsrf:
+                  type: boolean
+                  description:
+                  example: 
         required: true
       responses:
         200:
