[ENG-1613] feat: add csrf param to oauth endpoint (#68)

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -51,6 +51,8 @@ paths:
                   type: string
                   description: The provider that this app connects to.
                   example: salesforce
+                enableCSRFProtection:
+                  type: boolean
         required: true
       responses:
         200:
